--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,78 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.section {
+  margin-bottom: 20px;
+}
+
+h2 {
+  text-align: center;
+}
+
+label {
+  margin-bottom: 10px;
+}
+
+.active-requests {
+  max-width: 600px; /* Limit the width of active requests section */
+  margin: 0 auto; /* Center the active requests section */
+}
+
+p > div {
+  padding-bottom: 100px;
+}
+
+.active-requests > div {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.input-group {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.input-group label {
+  display: block;
+}
+
+input[type="text"],
+input[type="datetime-local"] {
+  max-width: 400px;
+  width: calc(100% - 200px); /* Adjust to accommodate padding */
+  padding: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 15px;
+}
+
+button.rounded {
+  border-radius: 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: block;
+  margin: 0 auto;
+}
+
+button.rounded:hover {
+  background-color: #0056b3;
+}
+
+.urgent {
+  color: red;
+}
